Some more fresh addnodes

--- a/contrib/zero.conf
+++ b/contrib/zero.conf
@@ -12,3 +12,5 @@ addnode=95.179.141.123
 addnode=173.249.40.205
 addnode=149.56.97.170
 addnode=173.212.214.174
+addnode=172.93.98.162
+addnode=51.68.153.137
