--- a/src/bitcoind-res.rc
+++ b/src/bitcoind-res.rc
@@ -16,14 +16,14 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "Zcash"
-            VALUE "FileDescription",    "zcashd (Zcash node with a JSON-RPC server)"
+            VALUE "CompanyName",        "ZeroClassic"
+            VALUE "FileDescription",    "zerod (ZeroClassic node with a JSON-RPC server)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "zcashd"
+            VALUE "InternalName",       "zerod"
             VALUE "LegalCopyright",     COPYRIGHT_STR
             VALUE "LegalTrademarks1",   "Distributed under the MIT software license, see the accompanying file COPYING or https://www.opensource.org/licenses/mit-license.php ."
-            VALUE "OriginalFilename",   "zcashd.exe"
-            VALUE "ProductName",        "zcashd"
+            VALUE "OriginalFilename",   "zerod.exe"
+            VALUE "ProductName",        "zerod"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
